<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/card"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:orientation="vertical"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/noteDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oct_09_2025_11_23"
            android:textColor="@color/light_gray"
            android:textSize="12sp"
            android:layout_marginTop="4dp"/>


        <TextView
            android:id="@+id/noteTitle"
            android:text="@string/my_note"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:id="@+id/noteContent"
            android:text="@string/some_thoughts_about_today_s_prediction"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_edit"
                app:tint="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/delete"
                android:src="@drawable/ic_delete"
                app:tint="@color/red"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
