<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/card"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:padding="12dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/assetName"
            android:text="@string/gold"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:id="@+id/assetPrice"
            android:text="@string/_2325_75"
            android:textSize="14sp"
            android:textColor="@color/light_gray"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />


        <TextView
            android:id="@+id/assetChange"
            android:text="@string/_0_34"
            android:textSize="14sp"
            android:textColor="@color/green"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
