<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background">

    <TextView
        android:id="@+id/txtAssetTitle"
        android:text="@string/gold_xau"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/txtAssetTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/txtPrediction"
        android:text="@string/predicted_up_0_7_confidence_68_regime_crisis"
        android:textColor="@color/light_gray"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/lineChart"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <Button
        android:id="@+id/btnAddNote"
        android:text="@string/add_note"
        app:layout_constraintTop_toBottomOf="@id/txtPrediction"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>
